[iOS] Fix iphoneos SDK builds for ios-ews queue <http://webkit.org/b/140748>

Reviewed by Daniel Bates.

Source/WebCore:

* WebCore.xcodeproj/project.pbxproj: Add new SPI headers.
* platform/graphics/cg/ImageBufferCG.cpp: Switch to using
"IOSurfaceSPI.h" from <IOSurface/IOSurface.h>.
* platform/graphics/cg/ImageBufferDataCG.cpp: Ditto.
* platform/graphics/cocoa/IOSurface.mm: Ditto.  Move definitions
in <IOSurface/IOSurfacePrivate.h> into "IOSurfaceSPI.h".
* platform/spi/cg/CoreGraphicsSPI.h: Switch to
WTF_EXTERN_C_{BEGIN,END}.  Add
CGContextGetFontAntialiasingStyle() and
CGContextSetFontAntialiasingStyle().
* platform/spi/cocoa/IOPMLibSPI.h: Switch to use IOReturnSPI.h.
* platform/spi/cocoa/IOReturnSPI.h: Add.
* platform/spi/cocoa/IOSurfaceSPI.h: Add.
* platform/spi/cocoa/IOTypesSPI.h: Add.

Source/WebKit2:

* Platform/spi/ios/BKSProcessAssertionSPI.h: Add -invalidate
definition.  Sort @property to the top of BKSProcessAssertion.

Canonical link: https://commits.webkit.org/158762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178927 268f45cc-cd09-0410-ab3c-d52691b4dbfc